Remove local path dependencies: init service downloads libs from GitHub Releases, all artifacts on Maven Central
- Replace bind-mount volume (CHAOS_LIBS_PATH) with chaos-libs-init service in all 7 C99 docker-compose files
- Init service downloads .so files from GitHub Releases (tag 1.0.0) using wget on Alpine
- Add service_completed_successfully dependency to all chaos-lib-consuming services
- Remove private Maven repo (repo.macstab.com) from all 6 Gradle build files — mavenCentral() only
- testing-framework: remove both MacstabReleases and MacstabSnapshots repo blocks
- Zero local checkout required: docker compose up pulls everything at runtime